# diazpons

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .stylelintrc.json  404.html  Cargo.toml  Dockerfile  Makefile  README.md  autores.php  autores.php~  blog.php  blog.php~  build.rs  checkout.php  checkout.php~  distribucion.php  distribucion.php~  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  gracias.php  index.html~  index.php  libros.php  menu.html  menu.html~  menu.php  menu.php~  newsletters.php  noticias.php  package-lock.json  package.json  prensa.php  prensa.php~  redes.php  (+6 more)
css/: lightbox.css  lightbox.css~  main.css  main.css~  style.css  style.css~  styles.css  unslider.css  unslider.css~
data/: authors.json  books.json  languages.json  press.json  reviews.json  series.json
editar/: config.php  config.php~  header.php
editar/addons/: kfunctions.php  kfunctions.php~
editar/snippets/: blogindex.html  cabaceira.html  catalogo.html  catalogo.html~  catalogo.php  catalogo.php~  css.html  css.html~  elenco.html  elenco.html~  explorer.html  grella.html  javas.html  javas.html~  lista-blog.html  lista-blog.html~  panelder.html  panelesq.html  panelesq.html~  pe.html  (+3 more)
fonts/: FuturaBC.eot  FuturaL.eot  FuturaLC.eot  FuturaM.eot  FuturaMC.eot
js/: cabesa.js~  cabesaso.js  cabesaso.js~  coleccion.js  lightbox.min.js  lightbox.min.js~  unslider.js
scripts/: generate-entry.js  hmr.js
src/: constants.rs  main.rs
webpack/: index.js  webpack.config.js
zohoverify/: verifyforzoho.html
(+223 files in other folders)
