[package]
name = "diazpons"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.15.0"
tera = "1.20.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["fs"] }

[build-dependencies]
glob = "0.3"
