[package]
name = "diazpons"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls", "mtls"] }
askama = { version = "0.12.0", features = ["with-rocket"] }
async-trait = "0.1.88"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.15.0"
tera = "1.20.0"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
time = { version = "0.3", features = ["formatting", "macros"] }
schemars = { version = "0.8.8", features = ["chrono"] }
regex = "1"
dotenv = "0.15.0"
url = "2.2.2"
chrono = { version = "0.4.22", features = ["serde"] }
askama_rocket = "0.12.0"
itertools = "0.14.0"

[build-dependencies]
glob = "0.3"
